Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16328

ALTER TABLE…page_compression_level should not rebuild table

    XMLWordPrintable

Details

    Description

      The InnoDB table options page_compressed and page_compression_level were introduced in MariaDB 10.1.0.

      An ALTER TABLE operation that changes these attributes unnecessarily causes a full table rebuild. Enabling page_compressed could be done instantaneously (not resulting in immediate space savings). The FORCE keyword could still be used to cause the table to be rebuilt.

      Disabling page_compressed must continue to require the table to be rebuilt.

      The page_compression_level basically matters for compression only, not for the decompression. It should be fine to change the compression level at any time, without any change.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 5.5h
                  1d 5.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.